# correlators_flow

./: .gitignore  README.md  av_chi_dof.py  continuum_extrapolation.sh  do_all.sh  do_everything.sh  do_everything_BB.sh  do_everything_hisq.sh  do_everything_thesis.sh  extract_shell_code.py  lib_plot_deprecated.py  lib_process_data.py  merge_raw_data.py  merge_raw_data.sh  plot.py  plot.sh  plot_different_temp.py  plot_extrapolation_quality.py  plot_lat_effects_and_extr.py  plot_lateffects_aextr_flowextr_final.py  plot_quenched_hisq.py  plot_scatter.py  plot_zero_flow_extr.py  pyproject.toml  scatterplot.py  template.py
misc/: 3_plot_combinedcontextr.py  _flowtime_extr_coarsest.py  autocorr_bootstrap_example.py  backup.txt  combine_samples.py  complete_analysis_on_a_sample.py  convert2png.sh  free_corr_flowtime.py  functions.py  informationcrit.py  plot_lattice_effects.py  plot_quenched_hisq.py  plot_scatter.py  plot_zero_flow_extr.py
multi-level/: cont_extr_new.py  plot_ML.py  update_2015_data.py
new/: 1_plot_correlator.py  3_plot_combinedcontextr.py  4_plot_extrapolation_quality.py  5_plot_flowextr.py  6_plot_finalcorr.py
perturbative_corr/: calc_pert_latt_corr_flow.py  calc_perts.sh  plot_QED_LPT.py  plot_pert_correlators.py  plot_tree_level_imp.py
plot/: 1_plot_correlator.py  1_plot_correlator.sh  2_plot_lateffects.py  3_plot_combinedcontextr.py  4_plot_extrapolation_quality.py  5_plot_flowextr.py  6_plot_finalcorr.py  lib_plot.py
plotting/: 00_plot_QED_LPT.py  0_plot_pert_correlators.py  1_plot_correlator.py  1_plot_correlator.sh  2_plot_lateffects.py  (+16 more)
(+161 files in other folders)
